tests/tests/neg/error_messages/wf/ty_alias00.rs
#[flux::alias(type Gt(x: bool)[v: int] = { i32[v] | v > x })] //~ ERROR mismatched sorts
type Gt = i32;
